Fixes: Navbar gap

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -32,6 +32,7 @@
 .menuitems{
     display: flex;
     align-items: center;
+    gap: 5px;
 }
 
 .image{
